Fix gradient display on mobile

--- a/style/main.css
+++ b/style/main.css
@@ -10,6 +10,8 @@ a:hover {
 
 body {
     background-color: black;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     color: white;
     font-family: "Cabin", sans-serif;
     margin: 0px;
